# AI_voice-assistant

./: .env.example  .gitignore  Future Scope.md  README.md  accent_classification.hdf5  fyp.ipynb  pyproject.toml  requirements.txt
src/api/: main.py  routes.py
src/config/: settings.py
src/models/: accent_detector.py  speech_processor.py
src/services/: response_generator.py  session_manager.py  tts_service.py
src/utils/: __init__.py  audio_utils.py
