[tool.poetry]
name = "ai-voice-assistant"
version = "0.1.0"
description = "AI voice assistant with accent detection, Whisper transcription, and GPT-3.5-Turbo response generation"
authors = ["Rishi Raj Tripathi"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

# OpenAI — speech-to-text (Whisper) and language model (GPT-3.5-Turbo)
openai = "^1.0"
openai-whisper = "^20231117"

# Audio processing
librosa = "^0.10"
scipy = "^1.11"
gTTS = "^2.4"

# Machine learning — accent classification neural network
tensorflow = "^2.15"
scikit-learn = "^1.3"
numpy = "^1.24"

# Data & visualisation
pandas = "^2.0"
matplotlib = "^3.7"
seaborn = "^0.13"

# UI
gradio = "^4.0"

# Utilities
flask = "^3.0"
tqdm = "^4.66"
ipython = "^8.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0"
ipykernel = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
