[tool.poetry]
name = "ai-voice-assistant"
version = "0.1.0"
description = "AI voice assistant with accent detection, Whisper transcription, and GPT-3.5-Turbo response generation"
authors = ["Rishi Raj Tripathi"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"  # 3.13.x is the target runtime

# OpenAI — speech-to-text (Whisper) and language model (GPT-3.5-Turbo)
openai = "^1.0"
openai-whisper = "^20231117"
torch = "^2.6"             # 2.6+ has Python 3.13 wheels; pulled in by openai-whisper
setuptools = "^70.0"       # provides pkg_resources needed by openai-whisper build

# Audio processing
librosa = "^0.10"
scipy = "^1.14"            # 1.14+ has Python 3.13 wheels
gTTS = "^2.4"

# Machine learning — accent classification neural network
tensorflow = "^2.18"       # 2.18+ has Python 3.13 wheels
scikit-learn = "^1.5"      # 1.5+ has Python 3.13 wheels
numpy = "^2.0"             # 2.x required for Python 3.13 wheels
triton = {version = "^2.3", markers = "sys_platform != 'darwin'"}  # Linux/CUDA only — no macOS wheels

# Data & visualisation
pandas = "^2.2"            # 2.2+ has Python 3.13 wheels
matplotlib = "^3.9"        # 3.9+ has Python 3.13 wheels
seaborn = "^0.13"

# UI
gradio = "^4.0"

# Utilities
flask = "^3.0"
tqdm = "^4.66"
ipython = "^8.0"

# Phase 1-3: API & configuration
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic-settings = "^2.2"
python-multipart = "^0.0.9"
python-dotenv = "^1.0"
redis = "^5.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0"
ipykernel = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
